# SummerHacks

./: .gitignore  LICENSE  README.md  sample.json
backend/: graph.py  main.py  state.py  web3_helper.py
backend/graph/: expense_graph.py
backend/routes/: challenge.py  verification.py
backend/schemas/: graph_state.py
backend/services/: coaching_service.py  projection_service.py  regex_parser.py
docs/: API_FLOW.md  ARCHITECTURE.md  CONTRIBUTION.md  DEMO_FLOW.md  FEATURES.md  SETUP.md  TECH_STACK.md
my-app/: package-lock.json  package.json
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/app/(dashboard)/: layout.tsx
my-app/app/commit/: page.tsx
my-app/app/data-source/: page.tsx
my-app/app/demo/: page.tsx
my-app/app/onboarding/: page.tsx
my-app/components/: GodModeDashboard.tsx  SubmissionView.tsx
my-app/components/dashboard/: Header.tsx  (+2 more)
my-app/types/: analysis.ts
starter-template/: .gitignore  ARCHITECTURE.md  README-SETUP.md
starter-template/SummerHacks/: expenseautopsy_core_frontend_md_v_1.md  expenseautopsy_final_detailed_prd_hackathon_build_v_1.md
starter-template/backend/: main.py  requirements.txt
starter-template/backend_backup/: graph.py  main.py  prompts.py  pyproject.toml  state.py  web3_helper.py
starter-template/my-app/: API_INTEGRATION_GUIDE.md  README_FRONTEND.md  package.json
starter-template/nishant-repo/: expenseautopsy_core_backend_md_v_1.md
starter-template/scripts/: bootstrap.ps1  install-skills.js  premerge-backup.ps1  run-all.ps1
starter-template/stitch_expense_autopsy_dashboard/: package-lock.json
(+49 files in other folders)
