[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eth-account>=0.13.7",
    "fastapi>=0.136.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
    "web3>=7.15.0",
]
